--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,5 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700);
-@import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i);
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap);
+@import url(https://fonts.googleapis.com/css?family=Rubik:300,400,500,600,700,800,900,300i,400i,500i,600i,700i,800i,900i&display=swap);
 
 
 
@@ -7,19 +7,6 @@
 
 body {
   font-family: Poppins;
-  font-style: normal;
-  line-height: 1.5;
-}
-.mbr-section-title {
-  font-style: normal;
-  line-height: 1.2;
-}
-.mbr-section-subtitle {
-  line-height: 1.3;
-}
-.mbr-text {
-  font-style: normal;
-  line-height: 1.6;
 }
 .display-1 {
   font-family: 'Poppins', sans-serif;
@@ -70,42 +57,12 @@ body {
 }
 /* Buttons */
 .btn {
-  position: relative;
-  font-weight: 500;
-  border-width: 1px;
-  font-style: normal;
-  letter-spacing: normal;
-  margin: .4rem .8rem;
-  white-space: normal;
-  transition-property: background-color, color, border-color, box-shadow;
-  transition-duration: .3s,.3s,.3s,2s;
-  transition-timing-function: ease-in-out;
-  display: -webkit-inline-flex;
-  display: inline-flex;
-  -webkit-align-items: center;
-  align-items: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  word-break: break-word;
   padding: 0.719rem 1.5rem;
   border-radius: 3px;
-}
-.btn .mbr-iconfont {
-  font-size: 1.6rem;
 }
 .btn:hover:after,
 .btn:focus:after,
 .btn.active:after {
-  content: '';
-  border: 1px solid;
-  border-color: inherit;
-  width: 100%;
-  height: 100%;
-  transition: border-radius 0.3s;
-  position: absolute;
-  left: 0%;
-  top: 0%;
-  opacity: 1;
   -webkit-border-radius: 100px;
   border-radius: 100px;
 }
@@ -114,9 +71,6 @@ body {
 .btn.active:after {
   -webkit-animation: 1s btn-animation linear infinite;
   animation: 1s btn-animation linear infinite;
-}
-.note-popover .btn:after {
-  display: none;
 }
 @keyframes btn-animation {
   0% {
@@ -130,37 +84,19 @@ body {
   }
 }
 .btn-sm {
-  border: 1px solid;
-  font-weight: 500;
-  letter-spacing: normal;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
   padding: 0.5rem 1rem;
   border-radius: 3px;
 }
 .btn-md {
-  font-weight: 500;
-  letter-spacing: normal;
-  margin: .4rem .8rem !important;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
   padding: 0.719rem 1.5rem;
   border-radius: 3px;
 }
 .btn-lg {
-  font-weight: 500;
-  letter-spacing: normal;
-  margin: .4rem .8rem !important;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
   padding: 0.875rem 1.875rem;
   border-radius: 3px;
 }
 .bg-primary {
-  background-color: #66458e !important;
+  background-color: #ff0000 !important;
 }
 .bg-success {
   background-color: #365c9a !important;
@@ -177,42 +113,42 @@ body {
 .btn-primary,
 .btn-primary:active,
 .btn-primary.active {
-  background-color: #66458e !important;
-  border-color: #66458e !important;
+  background-color: #ff0000 !important;
+  border-color: #ff0000 !important;
   color: #ffffff !important;
 }
 .btn-primary:hover,
 .btn-primary:focus,
 .btn-primary.focus {
   color: #ffffff !important;
-  background-color: #412c5b !important;
-  border-color: #412c5b !important;
+  background-color: #b30000 !important;
+  border-color: #b30000 !important;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff !important;
-  background-color: #412c5b !important;
-  border-color: #412c5b !important;
+  background-color: #b30000 !important;
+  border-color: #b30000 !important;
 }
 .btn-secondary,
 .btn-secondary:active,
 .btn-secondary.active {
-  background-color: #ca4336 !important;
-  border-color: #ca4336 !important;
-  color: #ffffff !important;
+  background-color: #ffffff !important;
+  border-color: #ffffff !important;
+  color: #808080 !important;
 }
 .btn-secondary:hover,
 .btn-secondary:focus,
 .btn-secondary.focus {
-  color: #ffffff !important;
-  background-color: #8e2f25 !important;
-  border-color: #8e2f25 !important;
+  color: #808080 !important;
+  background-color: #d9d9d9 !important;
+  border-color: #d9d9d9 !important;
 }
 .btn-secondary.disabled,
 .btn-secondary:disabled {
-  color: #ffffff !important;
-  background-color: #8e2f25 !important;
-  border-color: #8e2f25 !important;
+  color: #808080 !important;
+  background-color: #d9d9d9 !important;
+  border-color: #d9d9d9 !important;
 }
 .btn-info,
 .btn-info:active,
@@ -352,41 +288,41 @@ body {
 .btn-primary-outline:active,
 .btn-primary-outline.active {
   background: none;
-  border-color: #352449;
-  color: #352449 !important;
+  border-color: #990000;
+  color: #990000 !important;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus {
   color: #ffffff !important;
-  background-color: #66458e;
-  border-color: #66458e;
+  background-color: #ff0000;
+  border-color: #ff0000;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
   color: #ffffff !important;
-  background-color: #66458e !important;
-  border-color: #66458e !important;
+  background-color: #ff0000 !important;
+  border-color: #ff0000 !important;
 }
 .btn-secondary-outline,
 .btn-secondary-outline:active,
 .btn-secondary-outline.active {
   background: none;
-  border-color: #7a2820;
-  color: #7a2820 !important;
+  border-color: #cccccc;
+  color: #cccccc !important;
 }
 .btn-secondary-outline:hover,
 .btn-secondary-outline:focus,
 .btn-secondary-outline.focus {
-  color: #ffffff !important;
-  background-color: #ca4336;
-  border-color: #ca4336;
+  color: #808080 !important;
+  background-color: #ffffff;
+  border-color: #ffffff;
 }
 .btn-secondary-outline.disabled,
 .btn-secondary-outline:disabled {
-  color: #ffffff !important;
-  background-color: #ca4336 !important;
-  border-color: #ca4336 !important;
+  color: #808080 !important;
+  background-color: #ffffff !important;
+  border-color: #ffffff !important;
 }
 .btn-info-outline,
 .btn-info-outline:active,
@@ -503,10 +439,10 @@ body {
   border-color: #ffffff;
 }
 .text-primary {
-  color: #66458e !important;
+  color: #ff0000 !important;
 }
 .text-secondary {
-  color: #ca4336 !important;
+  color: #ffffff !important;
 }
 .text-success {
   color: #365c9a !important;
@@ -528,11 +464,11 @@ body {
 }
 a.text-primary:hover,
 a.text-primary:focus {
-  color: #352449 !important;
+  color: #990000 !important;
 }
 a.text-secondary:hover,
 a.text-secondary:focus {
-  color: #7a2820 !important;
+  color: #cccccc !important;
 }
 a.text-success:hover,
 a.text-success:focus {
@@ -573,7 +509,7 @@ a.text-black:focus {
 .mbr-section-btn a.btn:not(.btn-form) {
   border-radius: 100px;
   transition-property: background-color, color, border-color, box-shadow;
-  transition-duration: .3s,.3s,.3s,.8s;
+  transition-duration: 0.3s, 0.3s, 0.3s, 0.8s;
   transition-timing-function: ease-in-out;
 }
 .mbr-section-btn a.btn:not(.btn-form):hover,
@@ -584,8 +520,8 @@ a.text-black:focus {
   border-radius: 100px !important;
 }
 .mbr-gallery-filter li.active .btn {
-  background-color: #66458e;
-  border-color: #66458e;
+  background-color: #ff0000;
+  border-color: #ff0000;
   color: #ffffff;
 }
 .mbr-gallery-filter li.active .btn:focus {
@@ -594,19 +530,13 @@ a.text-black:focus {
 .nav-tabs .nav-link {
   border-radius: 100px !important;
 }
-.btn-form {
-  border-radius: 0;
-}
-.btn-form:hover {
-  cursor: pointer;
-}
 a,
 a:hover {
-  color: #66458e;
+  color: #ff0000;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #a68cc7;
+  color: #ffcccc;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -628,103 +558,12 @@ a:hover {
 .scrollToTop_wraper {
   display: none;
 }
-#scrollToTop a i:before {
-  content: '';
-  position: absolute;
-  height: 40%;
-  top: 25%;
-  background: #fff;
-  width: 2px;
-  left: calc(50% - 1px);
-}
-#scrollToTop a i:after {
-  content: '';
-  position: absolute;
-  display: block;
-  border-top: 2px solid #fff;
-  border-right: 2px solid #fff;
-  width: 40%;
-  height: 40%;
-  left: 30%;
-  bottom: 30%;
-  -webkit-transform: rotate(135deg);
-  transform: rotate(135deg);
-}
-/* Others*/
-.note-check a[data-value=Rubik] {
-  font-style: normal;
-}
-.mbr-arrow a {
-  color: #ffffff;
-}
-@media (max-width: 767px) {
-  .mbr-arrow {
-    display: none;
-  }
-}
-.form-control-label {
-  position: relative;
-  cursor: pointer;
-  margin-bottom: .357em;
-  padding: 0;
-}
-.alert {
-  color: #ffffff;
-  border-radius: 0;
-  border: 0;
-  font-size: .875rem;
-  line-height: 1.5;
-  margin-bottom: 1.875rem;
-  padding: 1.25rem;
-  position: relative;
-}
-.alert.alert-form::after {
-  background-color: inherit;
-  bottom: -7px;
-  content: "";
-  display: block;
-  height: 14px;
-  left: 50%;
-  margin-left: -7px;
-  position: absolute;
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-  width: 14px;
-}
 .form-control {
-  background-color: #f5f5f5;
-  box-shadow: none;
-  color: #565656;
   font-family: 'Rubik', sans-serif;
   font-size: 1rem;
-  line-height: 1.43;
-  min-height: 3.5em;
-  padding: 1.07em .5em;
-}
-.form-control,
-.form-control:focus {
-  border: 1px solid #e8e8e8;
-}
-.form-active .form-control:invalid {
-  border-color: red;
-}
-.mbr-overlay {
-  background-color: #000;
-  bottom: 0;
-  left: 0;
-  opacity: .5;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: 0;
 }
 blockquote {
-  font-style: italic;
-  padding: 10px 0 10px 20px;
-  font-size: 1.09rem;
-  position: relative;
-  border-color: #66458e;
-  border-width: 3px;
+  border-color: #ff0000;
 }
 ul,
 ol,
@@ -732,27 +571,8 @@ pre,
 blockquote {
   margin-bottom: 2.3125rem;
 }
-pre {
-  background: #f4f4f4;
-  padding: 10px 24px;
-  white-space: pre-wrap;
-}
-.inactive {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  pointer-events: none;
-  -webkit-user-drag: none;
-  user-drag: none;
-}
-.mbr-section__comments .row {
-  -webkit-justify-content: center;
-  justify-content: center;
-}
-/* Forms */
 .mbr-form .btn {
-  margin: .4rem 0;
+  margin: 0.4rem 0;
 }
 .mbr-form .input-group-btn a.btn {
   border-radius: 100px !important;
@@ -760,80 +580,77 @@ pre {
 .mbr-form .input-group-btn a.btn:hover {
   box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2);
 }
-.mbr-form .input-group-btn button[type="submit"] {
+.mbr-form .input-group-btn button[type='submit'] {
   border-radius: 100px !important;
   padding: 1rem 2rem;
 }
-.mbr-form .input-group-btn button[type="submit"]:hover {
+.mbr-form .input-group-btn button[type='submit']:hover {
   box-shadow: 0 10px 40px 0 rgba(0, 0, 0, 0.2);
 }
 .special-form {
   border-radius: 100px !important;
 }
-@media (max-width: 767px) {
-  .btn {
-    font-size: .75rem !important;
-  }
-  .btn .mbr-iconfont {
-    font-size: 1rem !important;
-  }
-}
-/* Social block */
-.btn-social {
-  font-size: 20px;
-  padding: 0;
-  width: 44px;
-  height: 44px;
-  line-height: 44px;
-  text-align: center;
-  position: relative;
-  border: 2px solid #c0a375;
-  border-color: #66458e;
-  color: #232323;
-  cursor: pointer;
-  border-radius: 100px;
-}
-.btn-social i {
-  top: 0;
-  line-height: 44px;
-  width: 44px;
-}
-.btn-social:hover {
-  color: #fff;
-  background: #66458e;
-}
-.btn-social + .btn {
-  margin-left: .1rem;
-}
-.input-group-btn button[type="submit"] {
+.input-group-btn button[type='submit'] {
   border-radius: 100px !important;
 }
 .input-group-btn a.btn {
   border-radius: 100px !important;
 }
-/* Footer */
-.note-air-layout .dropup .dropdown-menu,
-.note-air-layout .navbar-fixed-bottom .dropdown .dropdown-menu {
-  bottom: initial !important;
-}
-html,
-body {
-  height: auto;
-  min-height: 100vh;
-}
-.dropup .dropdown-toggle::after {
-  display: none;
-}
 .jq-selectbox li:hover,
 .jq-selectbox li.selected {
-  background-color: #66458e;
+  background-color: #ff0000;
   color: #ffffff;
 }
-.jq-selectbox .jq-selectbox__trigger-arrow {
-  border-top-color: contrast(currentColor, #000000, #ffffff, 30%);
+.jq-selectbox .jq-selectbox__trigger-arrow,
+.jq-number__spin.minus:after,
+.jq-number__spin.plus:after {
+  transition: 0.4s;
+  border-top-color: currentColor;
+  border-bottom-color: currentColor;
 }
-.jq-selectbox:hover .jq-selectbox__trigger-arrow {
-  border-top-color: #66458e;
+.jq-selectbox:hover .jq-selectbox__trigger-arrow,
+.jq-number__spin.minus:hover:after,
+.jq-number__spin.plus:hover:after {
+  border-top-color: #ff0000;
+  border-bottom-color: #ff0000;
+}
+.xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_default,
+.xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_current,
+.xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div.xdsoft_current {
+  color: #ffffff !important;
+  background-color: #ff0000 !important;
+  box-shadow: none !important;
+}
+.xdsoft_datetimepicker .xdsoft_calendar td:hover,
+.xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div:hover {
+  color: #000000 !important;
+  background: #ffffff !important;
+  box-shadow: none !important;
+}
+.lazy-bg {
+  background-image: none !important;
+}
+.lazy-placeholder:not(section),
+.lazy-none {
+  display: block;
+  position: relative;
+  padding-bottom: 56.25%;
+}
+iframe.lazy-placeholder,
+.lazy-placeholder:after {
+  content: '';
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  background: transparent no-repeat center;
+  background-size: contain;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%23ff0000' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
+}
+section.lazy-placeholder:after {
+  opacity: 0.5;
 }
 .cid-rnEg7RGVqX .dropdown-item:before {
   font-family: MobiriseIcons !important;
@@ -912,12 +729,12 @@ body {
 .cid-rnEg7RGVqX .navbar {
   min-height: 77px;
   transition: all .3s;
-  background: #232323;
+  background: #ffffff;
   background: none;
 }
 .cid-rnEg7RGVqX .navbar.opened {
   transition: all .3s;
-  background: #232323 !important;
+  background: #ffffff !important;
 }
 .cid-rnEg7RGVqX .navbar .dropdown-item {
   padding: .235rem 1.5rem;
@@ -932,6 +749,11 @@ body {
 }
 .cid-rnEg7RGVqX .navbar.collapsed.opened .dropdown-menu {
   top: 0;
+}
+@media (min-width: 992px) {
+  .cid-rnEg7RGVqX .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(99vh - 3.8rem);
+  }
 }
 .cid-rnEg7RGVqX .navbar.collapsed .dropdown-menu {
   background: transparent !important;
@@ -1014,7 +836,7 @@ body {
   }
 }
 .cid-rnEg7RGVqX .navbar.navbar-short {
-  background: #232323 !important;
+  background: #ffffff !important;
   min-height: 60px;
 }
 .cid-rnEg7RGVqX .navbar.navbar-short .navbar-logo img {
@@ -1055,7 +877,7 @@ body {
   padding: 0.667em 1.667em;
 }
 .cid-rnEg7RGVqX .navbar.navbar-expand-lg .dropdown .dropdown-menu {
-  background: #232323;
+  background: #ffffff;
 }
 .cid-rnEg7RGVqX .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
   margin: 0;
@@ -1087,7 +909,7 @@ body {
   width: 30px;
   height: 2px;
   border-right: 5px;
-  background-color: #fac769;
+  background-color: #ff0000;
 }
 .cid-rnEg7RGVqX button.navbar-toggler .hamburger span:nth-child(1) {
   top: 0;
@@ -1178,10 +1000,10 @@ body {
   }
 }
 .cid-rnEZnHNLj6 {
-  background-image: url("../../../assets/images/photo-2019-04-14-17.06.18-1027x1280.jpg");
+  background-image: url("../../../assets/images/ezgif.com-gif-maker-5.gif");
 }
 .cid-rnEZnHNLj6 .mbr-section-subtitle {
-  color: #fac769;
+  color: #ff0000;
 }
 .cid-rnEZnHNLj6 .mbr-section-title,
 .cid-rnEZnHNLj6 .mbr-text,
@@ -1238,10 +1060,10 @@ body {
   -webkit-flex-shrink: 0;
   flex-shrink: 0;
   position: relative;
-  background: #fac769;
+  background: #ffffff;
   width: 60px;
   height: 60px;
-  border: 1px solid #fac769;
+  border: 1px solid #ffffff;
   -webkit-border-radius: 50px;
   border-radius: 50px;
   text-align: center;
@@ -1315,7 +1137,7 @@ body {
 .cid-rnEFnYPv4X {
   padding-top: 15px;
   padding-bottom: 30px;
-  background-color: #fac769;
+  background-color: #ffffff;
 }
 .cid-rnEFnYPv4X .row-element,
 .cid-rnEFnYPv4X .image-element {
@@ -1346,10 +1168,17 @@ body {
     text-align: center !important;
   }
 }
+.cid-rnEFnYPv4X .mbr-text,
+.cid-rnEFnYPv4X .mbr-section-btn {
+  color: #000000;
+}
+.cid-rnEFnYPv4X .mbr-title {
+  color: #000000;
+}
 .cid-rnEhbqUveb {
   padding-top: 30px;
   padding-bottom: 45px;
-  background-color: #fac769;
+  background-color: #ffffff;
 }
 .cid-rnEhbqUveb .main {
   -webkit-flex-direction: row-reverse;
@@ -1391,11 +1220,21 @@ body {
     text-align: center !important;
   }
 }
+.cid-rnEhbqUveb .mbr-section-subtitle {
+  color: #ff0000;
+}
+.cid-rnEhbqUveb .mbr-text,
+.cid-rnEhbqUveb .mbr-section-btn {
+  color: #767676;
+}
+.cid-rnEhbqUveb .mbr-title {
+  color: #232323;
+}
 .cid-rnEiU47OHp {
   overflow: hidden !important;
   padding-top: 45px;
   padding-bottom: 30px;
-  background: linear-gradient(to right, #fac769 0%, #fac769 30%, #000000 30%, #000000 100%);
+  background: linear-gradient(to right, #ffffff 0%, #ffffff 30%, #ff0000 30%, #ff0000 100%);
 }
 .cid-rnEiU47OHp .animated-element {
   color: #efefef;
@@ -1419,16 +1258,16 @@ body {
 }
 @media (max-width: 768px) {
   .cid-rnEiU47OHp {
-    background: #000000;
+    background: #ff0000;
   }
   .cid-rnEiU47OHp .img-block {
     padding-bottom: 2rem;
   }
 }
 .cid-rnEtEFiYYu {
-  padding-top: 0px;
+  padding-top: 45px;
   padding-bottom: 0px;
-  background-color: #fac769;
+  background-color: #ffffff;
 }
 .cid-rnEtEFiYYu .main {
   -webkit-flex-direction: row-reverse;
@@ -1467,7 +1306,7 @@ body {
   color: #000000;
 }
 .cid-rnEtEFiYYu .mbr-title {
-  color: #ffffff;
+  color: #ff0000;
 }
 .cid-rnEtEFiYYu .mbr-text,
 .cid-rnEtEFiYYu .mbr-section-btn {
@@ -1480,7 +1319,7 @@ body {
 .cid-rnEy25CRi9 {
   padding-top: 0px;
   padding-bottom: 15px;
-  background-color: #fac769;
+  background-color: #ffffff;
 }
 .cid-rnEy25CRi9 .row-element,
 .cid-rnEy25CRi9 .image-element {
@@ -1512,7 +1351,7 @@ body {
   }
 }
 .cid-rnEy25CRi9 .mbr-title {
-  color: #ffffff;
+  color: #ff0000;
 }
 .cid-rnEy25CRi9 .mbr-text,
 .cid-rnEy25CRi9 .mbr-section-btn {
@@ -1521,7 +1360,7 @@ body {
 .cid-rnEn8L8aFh {
   padding-top: 0px;
   padding-bottom: 15px;
-  background-color: #fac769;
+  background-color: #ffffff;
 }
 .cid-rnEn8L8aFh .card {
   display: flex;
@@ -1530,7 +1369,7 @@ body {
   justify-content: center;
 }
 .cid-rnEn8L8aFh .card .card-wrapper {
-  background: #ffffff;
+  background: #cccccc;
   height: 1%;
 }
 .cid-rnEn8L8aFh .card .card-wrapper .card-img {
@@ -1607,7 +1446,7 @@ body {
 .cid-ro1ybeeS3n {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #fac769;
+  background-color: #ff0000;
 }
 .cid-ro1ybeeS3n .social-media {
   display: flex;
@@ -1648,10 +1487,10 @@ body {
   font-size: 13px;
 }
 .cid-ro1ybeeS3n .icon-transition span:hover {
-  background-color: #e9a933;
+  background-color: #767676;
 }
 .cid-ro1ybeeS3n .mbr-text {
-  color: #000000;
+  color: #ffffff;
 }
 @media (max-width: 991px) {
   .cid-ro1ybeeS3n .social-media {
